src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_5.snap
---
source: src/parser/test.rs
description: "add(, x)"
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Ok(
            [
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected ','."), (0,4)->(0,5)),
                ),
            ],
        ),
    },
]

===================================

add(, x)
    ^ SyntaxError: Unexpected ','.
